tdf#99030: PPTX import: Fixed lost slide background color

Regression from commit f3d1ac7

Change-Id: I5cb9fe1bb6c753c34b49e72194a9fbe4c10c1654